chore: apply remote current branch when apply-argocd.

--- a/argocd/application-set.yaml.tmpl
+++ b/argocd/application-set.yaml.tmpl
@@ -7,7 +7,7 @@ spec:
   generators:
   - git:
       repoURL: 'https://github.com/air-hand/k8s-playground.git'
-      revision: main
+      revision: $CURRENT_BRANCH
       directories:
         - path: 'apps/*'
   template:
@@ -17,7 +17,7 @@ spec:
       project: default
       source:
         repoURL: 'https://github.com/air-hand/k8s-playground.git'
-        targetRevision: main
+        targetRevision: $CURRENT_BRANCH
         path: '{{path}}'
       destination:
         server: 'https://kubernetes.default.svc'
