--- a/argocd/application-set.yaml.tmpl
+++ b/argocd/application-set.yaml.tmpl
@@ -9,7 +9,6 @@ spec:
       repoURL: 'https://github.com/air-hand/k8s-playground.git'
       revision: $CURRENT_BRANCH
       directories:
-        - path: 'apps/namespace'
         - path: 'apps/secret-operator'
         - path: 'apps/arc'
   template:
@@ -25,7 +24,7 @@ spec:
       destination:
         server: 'https://kubernetes.default.svc'
         namespace: default
-      syncPolicy:
-        automated:
+#      syncPolicy:
+#        automated:
 #          prune: true
-          selfHeal: true
+#          selfHeal: true
